added Language dropdown

--- a/front-end/public/locales/en/common.json
+++ b/front-end/public/locales/en/common.json
@@ -10,7 +10,8 @@
             "games": "Games",
             "reviews": "Reviews",
             "login": "Login",
-            "logout": "Logout"
+            "logout": "Logout",
+            "language": "Language"
         }
     },
     "consoles": {
