--- a/front-end/public/locales/nl/common.json
+++ b/front-end/public/locales/nl/common.json
@@ -10,7 +10,8 @@
             "games": "Games",
             "reviews": "Reviews",
             "login": "Aanmelden",
-            "logout": "Afmelden"
+            "logout": "Afmelden",
+            "language": "Taal"
         }
     },
     "consoles": {
