Translations and user admin can not blacklist admin

--- a/front-end/public/locales/en/common.json
+++ b/front-end/public/locales/en/common.json
@@ -13,7 +13,8 @@
             "reviews": "Reviews",
             "login": "Login",
             "logout": "Logout",
-            "language": "Language"
+            "language": "Language",
+            "welcome": "Welcome"
         }
     },
     "consoles": {
